--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
+		<meta name="description" content="Location de bungalows en Guadeloupe" />
 		<link rel="icon" href="%PUBLIC_URL%/icoLogo.jpg" />
 		<title>Coco et Cajou</title>
 	</head>
