actions: update Wave

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Location de bungalows en Guadeloupe" />
 		<link rel="icon" href="%PUBLIC_URL%/icoLogo.jpg" />
+		<meta property="og:title" content="Coco et Cajou Bungalows" />
+		<meta property="og:type" content="location vacances Guadeloupe" />
+		<meta property="og:url" content="https://cocoetcajou.fr/" />
+		<meta
+			property="og:description"
+			content="location de bungalows de vacances en Guadeloupe Sainte-Anne"
+		/>
 		<title>Coco et Cajou</title>
 	</head>
 	<body>
