action photos: resize

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,20 @@
 			property="og:description"
 			content="location de bungalows de vacances en Guadeloupe Sainte-Anne"
 		/>
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-TK5VXSJ6HX"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-TK5VXSJ6HX');
+		</script>
 		<title>Coco et Cajou</title>
 	</head>
 	<body>
