actions photos: update actions responsive: fix bug map

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Location de bungalows en Guadeloupe" />
-		<link rel="icon" href="%PUBLIC_URL%/icoLogo.jpg" />
+		<link rel="icon" href="%PUBLIC_URL%/icoLogo.webp" />
 		<meta property="og:title" content="Coco et Cajou Bungalows" />
 		<meta property="og:type" content="location vacances Guadeloupe" />
 		<meta property="og:url" content="https://cocoetcajou.fr/" />
+		<meta property="og:image" content="https://cocoetcajou.fr/icoLogo.webp" />
 		<meta
 			property="og:description"
 			content="location de bungalows de vacances en Guadeloupe Sainte-Anne"
