--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Location de bungalows en Guadeloupe" />
+		<meta
+			name="description"
+			content="Location de bungalows à Sainte-Anne en Guadeloupe, niché dans un écrin de verdure"
+		/>
 		<link rel="icon" href="%PUBLIC_URL%/icoLogo.webp" />
 		<meta property="og:title" content="Coco et Cajou Bungalows" />
 		<meta property="og:type" content="location vacances Guadeloupe" />
@@ -34,7 +37,7 @@
 
 			gtag('config', 'G-TK5VXSJ6HX');
 		</script>
-		<title>Coco et Cajou</title>
+		<title>Coco et Cajou Bungalows</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
